external/nas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-nas
  namespace: traefik
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-nas
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.88.60
    ports:
      - name: http
        port: 80
        protocol: TCP
